Revision history for Math-BigNum

0.06    xxx
        - fixed bpow(0, Inf) to return `0` and bpow(0, -Inf) to return `Inf`
        - added more tests for bpow() and bipow()

0.05    2016-26-05
        - 5% optimization in pow(), mod() and is_div() with integer arguments.
        - fixed `0**Inf` to return `0` and `0**(-Inf)` to return `Inf`

0.04    2016-16-03
        - Added more multimethods to support any kind of numerical object, such as Math::BigInt, Math::BigFloat, etc...
        - Improved the support for infinity.
        - `BigNum <=> NaN` will now return `undef` instead of `0`.

0.03    2016-08-02
        - Minor performance improvement in the creation of BigNum objects with integers or fractions.
        - Changed the result of `(-Inf)**(Float)` from `NaN` to `Inf`.
        - Changed the result of `sqrt(-Inf)` from `NaN` to `Inf`.
        - Improved the documentation.

0.02    2016-06-02
        - Support for decimal numbers with underscores (`_`)
        - Fixed a non-portable test.

0.01    2016-05-02
        - First version, released on an unsuspecting world.