@@ -3,6 +3,7 @@ Revision history for Math-BigNum
 0.06    xxx
         - fixed bpow(0, Inf) to return `0` and bpow(0, -Inf) to return `Inf`
         - added more tests for bpow() and bipow()
+        - added the irand() method, which returns a random integer
 
 0.05    2016-26-05
         - 5% optimization in pow(), mod() and is_div() with integer arguments.
